﻿<h3>DnnChat</h3>
<p class="Contributor">
	Christoc.com Software Solutions <br />
	<a href="mailto:modules@christoc.com">modules@christoc.com</a><br />
	<a href=http://www.christoc.com>http://www.christoc.com</a><br />
	<br />
	<br />
		Oliver Hine <br />
	<a href=http://www.oliverhine.com>http://www.oliverhine.com</a><br />

</p>
<hr/>
<div class="License">

<h3>About the dnnCHAT Module</h3>
		<p class="Owner">
		<b>Version 03.00.00</b><br /><br /> 
	</p>
	<ul>
		<li>Updated for DNN 8 references</li>
		<li>Removed NewtonSoft.Json custom references</li>
		<li>Updated layout for more bootstrap/responsive properties.</li>
		<li>Removed cleanup file due to DNN8 errors, cleanup should manually be done</li>
	</ul>

	<h3>About the dnnCHAT Module</h3>
		<p class="Owner">
		<b>Version 02.00.00</b><br /><br /> 
	</p>
	<ul>
		<li>Windows Azure Compatibility</li>
		<li>Updated MSBuild Community Tasks to 1.4.0.88</li>
		<li>Updated to SignalR 2.2.0</li>
		<li>Bootstrap V3.3.2 Enabled (<strong>requires a bootstrap skin!</strong>).</li>
	</ul>


	<p class="Owner">
		<b>Version 01.01.01</b><br /><br /> 
	</p>
	<ul>
		<li>Added @all notification check/display</li>
		<li>Updated to SignalR 2.1.2</li>
		<li>Updated the "Test" response to be something a little more friendly</li>
		<li>Added the ability to use the Edit control to manage "Rooms" in the module.</li>
		<li>Added user Avatars to the Message object, storing UserID for each message now as well.</li>
	</ul>
	<p class="Owner">
		<b>Version 01.01.00</b><br /><br /> 
	</p>
	<ul>
		<li>Updated to SignalR 2.1.0</li>
	</ul>
	<p class="Owner">
		<b>Version 01.00.03</b><br /><br /> 
	</p>
	<ul>
		<li>Updated to SignalR 2.0.2</li>
		<li>Added a Chat Archives page</li>
		<li>Added user avatar to the User List on the chat page, only for logged in user</li>
		<li>Added soft delete flag (IsDeleted) to the Messages table </li>
		<li>Added ability to delete messages (admins) by clicking on the Date column for a message</li>
	</ul>