@@ -12,6 +12,15 @@
 <hr/>
 <div class="License">
 
+
+<h3>About the dnnCHAT Module</h3>
+		<p class="Owner">
+		<b>Version 03.00.01</b><br /><br /> 
+	</p>
+	<ul>
+		<li>Fix for "close" error in jquery causing issues in Internet Explorer</li>
+	</ul>
+
 <h3>About the dnnCHAT Module</h3>
 		<p class="Owner">
 		<b>Version 03.00.00</b><br /><br /> 
